# grid-watcher

./: CMakeLists.txt  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  LICENSE  README.md  REPORT.json  compile_commands.json
.cache/clangd/index/: arithmetic.hpp.FA25D0E0C5CA810C.idx  behavioral_analyzer.hpp.96D4260A2ED1E073.idx  benchmark.cpp.2F327DDC4A07A244.idx  bloom_filter.hpp.86A2DD26B8FE160E.idx  bpf.h.DFC2792809B9FE08.idx  cli_main.cpp.975B55D8A993C46D.idx  compiler-tests.h.B405D535FB2180C7.idx  config.hpp.F51F6AD80AB21B7B.idx  convert.hpp.F9CB290D77E51825.idx  demo.cpp.CD5557664348F0A7.idx  dlt.h.495665EFE8B14F76.idx  fast_hash.hpp.3EF6B2C3AC43020C.idx  funcattrs.h.F458FF5C29384160.idx  grid_watcher.cpp.E73286B5E06F7A56.idx  grid_watcher.hpp.3F26194449C26943.idx  ipv4.hpp.66AA18C56578C4B3.idx  lock_free.hpp.6F8ACFAAB8A915BA.idx  logger.hpp.05CBDA3466457DE2.idx  logger.hpp.DD69F520D920BD9D.idx  main.cpp.BF3802033D7608E8.idx  metrics.hpp.314A2DBAFA1F9D74.idx  metrics.hpp.A67492A8C18BDB80.idx  mitigation_engine.hpp.ADD05EC17D203DB0.idx  modbus_parser.hpp.D8D38D6898750F3C.idx  packet_capture.hpp.A4BC6139C18AAB39.idx  packet_processor.hpp.1C2DB098C971157F.idx  pcap-inttypes.h.B8B84EF700522F4A.idx  pcap.h.120FB25C76753F95.idx  pcap.h.C4A81DA23648E73F.idx  socket.h.011EB91858D350C8.idx  statistics.hpp.B7EFD6956EF32761.idx  statistics.hpp.C9AB2EAE5DB7EB49.idx  types.hpp.7F43417AFE23C864.idx
docs/: API_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PRODUCTION_GUIDE.md  QUICK_REFERENCE.md
include/grid_watcher/: grid_watcher.hpp
include/grid_watcher/capture/: logger.hpp  metrics.hpp  packet_capture.hpp  statistics.hpp
include/grid_watcher/core/: ipv4.hpp  socket_address.hpp  socket_base.hpp  tcp_socket.hpp
include/grid_watcher/meta/: arithmetic.hpp
include/grid_watcher/monitor/: logger.hpp  metrics.hpp  statistics.hpp
include/grid_watcher/performance/: bloom_filter.hpp  cache_utils.hpp  fast_hash.hpp  lock_free.hpp
include/grid_watcher/processing/: packet_processor.hpp
include/grid_watcher/scada/: behavioral_analyzer.hpp  config.hpp  mitigation_engine.hpp  modbus_parser.hpp  types.hpp
include/grid_watcher/utils/: clamp.hpp  convert.hpp  subnet.hpp
include/grid_watcher/web/: web_server.hpp
scripts/: build-release.sh  setup_windows.ps1  traffic_gen.py
src/: api_server.cpp  benchmark.cpp  brenchmark.cpp  cli_main.cpp  demo.cpp  grid_watcher.cpp  main.cpp
web/: dashboard.html
